Dashboard page fix bug: Review Queues cards were wider than above cards on mobile

--- a/www/css/autoload/aggregate/dashboard.css
+++ b/www/css/autoload/aggregate/dashboard.css
@@ -1,6 +1,6 @@
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .fix-min-height {
-    min-height: 134px;
+    min-height: 145px;
   }
 }
 
